React ToDo List

--- a/src/components/item-add-form/add-item-form.css
+++ b/src/components/item-add-form/add-item-form.css
@@ -1,9 +1,9 @@
-.bottom-panel {
+.item-add-form{
     margin-top: 10px;
 }
 
-.bottom-panel .new-todo-label {
-    width: auto;
-    flex-grow: 1;
+.item-add-form input {
+    /* width: auto;
+    flex-grow: 1; */
     margin-right: 3px;
 }
