--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,4 +1,7 @@
 .todo-app {
     margin: 2rem auto 0 auto;
     max-width: 500px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
